--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+	<meta name="author" content="Alejandro F. Marrero">
+	<meta name="keywords" content="HTML, CSS, JavaScript, Rest API">
+	<meta name="description"
+		content="Full-Stack Development Course :: Code Academy Berlin 2022 :: Fakeshop using React.js, Bootstrap and fetching data from a Rest API">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -13,7 +17,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>CAB Fake Store</title>
+    <title>afm :: Fakeshop on React.js</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
